Product in col align button fix

--- a/src/assets/sass/components/_products.scss
+++ b/src/assets/sass/components/_products.scss
@@ -1,4 +1,9 @@
 .product-in-col {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
     .product-avaiable {
         margin-bottom: 10px;
         font-size: 10px;
